--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,11 +1,11 @@
-<form action = "{% url 'polls:vote' q.id %}" method="post">
+<form action = "{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 <fieldset>
-    <legend><h1>{{ q.question_text }}</h1></legend>
+    <legend><h1>{{ question.question_text }}</h1></legend>
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
-    {% for choice in q.choice_set.all %}
+    {% for choice in question.choice_set.all %}
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
         <br>
