--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 <h1>Questions</h1>
-{% if question_list %}
+{% if latest_question_list %}
     <ol>
-        {% for question in question_list %}
+        {% for question in latest_question_list %}
             <li><a href = "{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
         {% endfor %}
     </ol>
