--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+<link rel="stylesheet", href="{% static 'polls/style.css' %}">
+
 <h1>Questions</h1>
 {% if latest_question_list %}
     <ol>
